tests/NormalTests/paczka1/fuzzy1/31643373.err
Error in line 5: 4oMNU7sy8y A329 1,9
Error in line 9: LCaZf6cAKl S270 1P,P
Error in line 13: LCaZf6cAKl S270 67,1
Error in line 15: DZKRWa8 S6W2 66,6
Error in line 14: LCaZf6cAKl A329 98,2
Error in line 26: 5xi0xyuyAlG A329 80,8
Error in line 2: A329 S270 4,0
Error in line 25: LCaZf6cAKl S672 79,1
Error in line 29: LCaZf6cAKl A675 75,2
Error in line 30: LCaZf6cAKl S270 54,0
